# SJTU_AI_toolkit

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  THIRD-PARTY-NOTICES.txt  classification.ipynb  classification.md  classification_alloys.ipynb  gradcam.py  icons.md  image_a.py  main.py  mygui.py  pyproject.toml  requirements.txt  rootpaths.py  segment_anything.py
visual_ccc/: __main__.py  gradcam.py  image_a.py  mygui.py  paths.py  sam_segment.py  visualcnn_model.py
